--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "simple-react-npm-component",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "scripts": {
     "build": "rollup -c",
+    "prepublishOnly": "npm run build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -34,7 +35,8 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-scss": "^2.6.1",
-    "storybook-addon-sass-postcss": "^0.1.3"
+    "storybook-addon-sass-postcss": "^0.1.3",
+    "node-sass": "^7.0.3"
   },
   "peerDependencies": {
     "prop-types": "^15.8.1",
@@ -42,7 +44,5 @@
     "react-dom": "^18.2.0",
     "lodash": "^4.17.21"
   },
-  "dependencies": {
-    "node-sass": "^7.0.3"
-  }
+  "dependencies": {}
 }
